<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.pi.androidbasehiltmvvm.features.createeditnote.domain.viewmodel.CreateEditNoteViewModel" />

        <variable
            name="note"
            type="com.pi.data.remote.response.Note" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.pi.androidbasehiltmvvm.core.view.AspectRatioImageView
            android:id="@+id/noteImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder"
            app:ari_ratio="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/imageUrlTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            app:boxStrokeColor="@color/purple_200"
            app:errorIconDrawable="@null"
            app:helperText="@string/optional"
            app:helperTextTextColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/imageUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_url"
                android:maxLines="2"
                android:text="@={viewmodel._imageUrl}"
                android:textColor="@color/black"
                tools:text="Note Image Url" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            app:boxStrokeColor="@color/purple_200"
            app:errorIconDrawable="@null"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageUrlTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_component_1x"
                android:hint="@string/title"
                android:maxLines="2"
                android:text="@={viewmodel._title}"
                android:textColor="@color/black"
                tools:text="Note Title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            app:boxStrokeColor="@color/purple_200"
            app:errorIconDrawable="@null"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_component_1x"
                android:hint="@string/description"
                android:maxLines="2"
                android:text="@={viewmodel._description}"
                android:textColor="@color/black"
                tools:text="Note Description" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/green"
            android:onClick="@{()->viewmodel.controlNoteDetails()}"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>